--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: node_js
 node_js: 
  - "12"
-install:
-- 'npm install'
+ jdk:
+ - oraclejdk8
+ addons:
+ sonarcloud: true
+script:
+-sonar-scanner -Dsonar.login=%SONAR_TOKEN -Dsonar.organization=royk8 -Dsonar.projectKey=Lab2Arquisoft -Dsonar.sources='./app' -X
