--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: node_js
 node_js: 
  - "12"
- jdk:
+jdk:
  - oraclejdk8
- addons:
- sonarcloud: true
+addons:
+ sonarcloud: true 
 script:
--sonar-scanner -Dsonar.login=%SONAR_TOKEN -Dsonar.organization=royk8 -Dsonar.projectKey=Lab2Arquisoft -Dsonar.sources='./app' -X
+ - sonar-scanner -Dsonar.login=$SONAR_TOKEN -Dsonar.organization=royk8 -Dsonar.projectKey=lab2arquisoft -Dsonar.sources='./app' -X
+
